--- a/app/views/admin/collections/shared/_form.html.erb
+++ b/app/views/admin/collections/shared/_form.html.erb
@@ -266,13 +266,13 @@
   <div class="flex justify-stretch grid grid-cols-3 grid-flow-col max-w-3xl">
     <div class="bg-mountbatten-100 px-3 col-span-1 rounded-bl-md ring-2 ring-mountbatten-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:py-3">
-        <%= form.label :should_unsync, 'სინქრონიზება', class: "block text-sm font-medium leading-6 text-gray-900 sm:py-1.5" %>
+        <%= form.label :should_unsync, 'სინქრონიზება', class: "block text-sm font-medium leading-6 #{@collection.group.should_sync? ? 'text-gray-900' : 'text-gray-500'} sm:py-1.5" %>
       </div>
     </div>
     <div class="bg-gray-100 px-3 rounded-br-md col-span-2 ring-2 ring-gray-500 space-y-12 sm:space-y-16 inline-flex">
       <div class="sm:items-start sm:divide-x sm:gap-4 sm:py-3">
         <div class="mt-2 sm:mt-0">
-          <%= form.check_box :should_unsync, { checked: !@collection.should_unsync, class: "bg-gray-50 border border-gray-300 w-8 h-8 text-gray-900 text-sm text-mountbatten-500 rounded-md focus:ring-offset-0 focus:ring-1 focus:ring-oceanside-500 focus:border-oceanside-500 block dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-oceanside-500" }, 0, 1 %>
+            <%= form.check_box :should_unsync, { disabled: !@collection.group.should_sync?, checked: @collection.group.should_sync? && !@collection.should_unsync, class: "border border-gray-300 w-8 h-8 #{@collection.group.should_sync? ? 'text-mountbatten-500 bg-gray-50' : 'text-gray-300 bg-gray-100'} text-sm rounded-md focus:ring-offset-0 focus:ring-1 focus:ring-oceanside-500 focus:border-oceanside-500 block dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-oceanside-500" }, 0, 1 %>
         </div>
       </div>
     </div>
