--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -17,9 +17,12 @@
 
           <div class="flex justify-between grid grid-flow-col w-full">
             <div>
-              <div class="grid justify-items-start">
+              <div class="grid grid-flow-col space-x-2 justify-items-start">
                 <div class="inline-flex">
                   <%= form.text_field :order_number, placeholder: "ID-თი ძიება", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                </div>
+                <div class="inline-flex">
+                  <%= form.text_field :original_contents, placeholder: "ტექსტით ძიება", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                 </div>
               </div>
             </div>
@@ -34,13 +37,16 @@
             </div>
           </div>
         </div>
-        <div class="col-span-1 space-y-3 sm:space-y-4">
+        <div class="ml-3 col-span-1 space-y-3 sm:space-y-4">
 
           <div class="flex justify-between grid grid-flow-col w-full">
             <div>
-              <div class="grid justify-items-start">
+              <div class="grid grid-flow-col space-x-2 justify-items-start">
                 <div class="inline-flex">
-
+                  <%= form.text_field :order_number, placeholder: "Search by ID", class: "max-w-[120px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
+                </div>
+                <div class="inline-flex">
+                  <%= form.text_field :translation_contents, placeholder: "Search by text", class: "max-w-[180px] bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                 </div>
               </div>
             </div>
@@ -75,18 +81,18 @@
                     </div>
                   </div>
                   <div>
-                    <div class="grid grid-flow-col items-end">
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                    <div class="grid grid-flow-col space-x-2 items-end">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                         </svg>
                       </div>
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
                       </div>
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                         </svg>
@@ -104,18 +110,18 @@
             </div>
 
             <div class="mr-3 mt-3 grid grid-flow-col justify-items-end">
-              <div class="flex">
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+              <div class="space-x-2 flex">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
                 </div>
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 </div>
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
@@ -140,18 +146,18 @@
                     </div>
                   </div>
                   <div>
-                    <div class="grid grid-flow-col items-end">
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                    <div class="grid grid-flow-col space-x-2 items-end">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 6.75 22.5 12l-5.25 5.25m-10.5 0L1.5 12l5.25-5.25m7.5-3-4.5 16.5" />
                         </svg>
                       </div>
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
                         </svg>
                       </div>
-                      <div class="ml-2 inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                      <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
                         </svg>
@@ -169,18 +175,18 @@
             </div>
 
             <div class="mt-3 grid grid-flow-col justify-items-end">
-              <div class="flex">
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+              <div class="flex space-x-2">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
                 </div>
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
                 </div>
-                <div class="ml-2 inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
+                <div class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
